y.output
   0  $accept : total $end

   1  total : line
   2        | total CMD_SEPARATOR line
   3        | total CMD_SEPARATOR

   4  line : mv_line
   5       | ls_line
   6       | pwd_line
   7       | touch_line
   8       | rm_line
   9       | grep_line
  10       | cat_line
  11       | ps_line
  12       | clear_line
  13       | history_line
  14       | mkdir_line
  15       | cp_line
  16       | head_line
  17       | pkill_line
  18       | ip_line
  19       | netstat_line
  20       | curl_line

  21  ls_line : LS_COMMAND ls_all_options
  22          | LS_COMMAND ls_all_options PARAM_VALUE
  23          | LS_COMMAND PARAM_VALUE ls_all_options
  24          | LS_COMMAND
  25          | LS_COMMAND PARAM_VALUE

  26  ls_all_options : PARAM_NAME PARAM_VALUE
  27                 | PARAM_NAME
  28                 | PARAM_NAME PARAM_VALUE ls_all_options
  29                 | PARAM_NAME ls_all_options

  30  mkdir_line : MKDIR_COMMAND mkdir_all_options PARAM_VALUE
  31             | MKDIR_COMMAND PARAM_VALUE mkdir_all_options
  32             | MKDIR_COMMAND mkdir_all_options

  33  mkdir_all_options : PARAM_NAME PARAM_VALUE
  34                    | PARAM_NAME
  35                    | PARAM_NAME PARAM_VALUE mkdir_all_options
  36                    | PARAM_NAME mkdir_all_options

  37  cp_line : CP_COMMAND cp_all_options cp_file_dest
  38          | CP_COMMAND cp_file_dest cp_all_options

  39  cp_file_dest : PARAM_VALUE PARAM_VALUE

  40  cp_all_options : PARAM_NAME PARAM_VALUE
  41                 | PARAM_NAME
  42                 | PARAM_NAME PARAM_VALUE cp_all_options
  43                 | PARAM_NAME cp_all_options

  44  head_line : HEAD_COMMAND head_all_options head_all_paths

  45  head_all_paths : PARAM_VALUE
  46                 | PARAM_VALUE head_all_paths

  47  head_all_options : HEAD_PARAM INT_VALUE
  48                   | HEAD_PARAM INT_VALUE head_all_options
  49                   | PARAM_NAME head_all_options

  50  pkill_line : PKILL_COMMAND PARAM_VALUE
  51             | PKILL_COMMAND pkill_all_options

  52  pkill_all_options : pkill_param PARAM_VALUE
  53                    | pkill_param
  54                    | pkill_param PARAM_VALUE pkill_all_options
  55                    | pkill_param pkill_all_options

  56  pkill_param : PARAM_NAME
  57              | INT_VALUE

  58  ip_line : IP_COMMAND PARAM_VALUE
  59          | IP_COMMAND ip_all_options PARAM_VALUE

  60  ip_all_options : PARAM_NAME
  61                 | PARAM_NAME ip_all_options

  62  netstat_line : NETSTAT_COMMAND netstat_all_options netstat_arg

  63  netstat_arg : PARAM_VALUE
  64              |

  65  netstat_all_options : PARAM_NAME
  66                      | PARAM_NAME netstat_all_options

  67  curl_line : CURL_COMMAND curl_all_options PARAM_VALUE
  68            | CURL_COMMAND PARAM_VALUE curl_all_options

  69  curl_all_options : PARAM_NAME PARAM_VALUE
  70                   | PARAM_NAME
  71                   | PARAM_NAME PARAM_VALUE curl_all_options
  72                   | PARAM_NAME curl_all_options

  73  mv_line : MV_COMMAND mv_all_options path_dst
  74          | MV_COMMAND path_dst mv_all_options

  75  path_dst : PARAM_VALUE PARAM_VALUE

  76  mv_all_options : PARAM_NAME PARAM_VALUE
  77                 | PARAM_NAME
  78                 | PARAM_NAME PARAM_VALUE mv_all_options
  79                 | PARAM_NAME mv_all_options

  80  pwd_line : PWD_COMMAND
  81           | PWD_COMMAND pwd_all_options

  82  pwd_all_options : PARAM_NAME PARAM_VALUE
  83                  | PARAM_NAME
  84                  | PARAM_NAME PARAM_VALUE pwd_all_options
  85                  | PARAM_NAME pwd_all_options

  86  touch_line : TOUCH_COMMAND PARAM_VALUE
  87             | TOUCH_COMMAND touch_all_options PARAM_VALUE
  88             | TOUCH_COMMAND PARAM_VALUE touch_all_options
  89             | TOUCH_COMMAND touch_all_options

  90  touch_all_options : PARAM_NAME PARAM_VALUE
  91                    | PARAM_NAME
  92                    | PARAM_NAME PARAM_VALUE touch_all_options
  93                    | PARAM_NAME touch_all_options

  94  rm_line : RM_COMMAND PARAM_VALUE
  95          | RM_COMMAND rm_all_options PARAM_VALUE
  96          | RM_COMMAND PARAM_VALUE rm_all_options
  97          | RM_COMMAND rm_all_options

  98  rm_all_options : PARAM_NAME PARAM_VALUE
  99                 | PARAM_NAME
 100                 | PARAM_NAME PARAM_VALUE rm_all_options
 101                 | PARAM_NAME rm_all_options

 102  grep_line : GREP_COMMAND grep_args
 103            | GREP_COMMAND grep_all_options grep_args
 104            | GREP_COMMAND grep_args grep_all_options
 105            | GREP_COMMAND grep_all_options

 106  grep_args : PARAM_VALUE PARAM_VALUE
 107            | PARAM_VALUE

 108  grep_all_options : PARAM_NAME
 109                   | PARAM_NAME grep_all_options

 110  cat_line : CAT_COMMAND
 111           | CAT_COMMAND PARAM_VALUE
 112           | CAT_COMMAND cat_all_options PARAM_VALUE
 113           | CAT_COMMAND PARAM_VALUE cat_all_options
 114           | CAT_COMMAND cat_all_options

 115  cat_all_options : PARAM_NAME PARAM_VALUE
 116                  | PARAM_NAME
 117                  | PARAM_NAME PARAM_VALUE cat_all_options
 118                  | PARAM_NAME cat_all_options

 119  ps_line : PS_COMMAND
 120          | PS_COMMAND ps_all_options
 121          | PS_COMMAND PARAM_VALUE

 122  ps_all_options : PARAM_NAME PARAM_VALUE
 123                 | PARAM_NAME
 124                 | PARAM_NAME PARAM_VALUE ps_all_options
 125                 | PARAM_NAME ps_all_options

 126  clear_line : CLEAR_COMMAND

 127  history_line : HISTORY_COMMAND
 128               | HISTORY_COMMAND PARAM_VALUE

state 0
	$accept : . total $end  (0)

	MV_COMMAND  shift 1
	LS_COMMAND  shift 2
	PWD_COMMAND  shift 3
	TOUCH_COMMAND  shift 4
	RM_COMMAND  shift 5
	GREP_COMMAND  shift 6
	CAT_COMMAND  shift 7
	PS_COMMAND  shift 8
	CLEAR_COMMAND  shift 9
	HISTORY_COMMAND  shift 10
	MKDIR_COMMAND  shift 11
	CP_COMMAND  shift 12
	HEAD_COMMAND  shift 13
	PKILL_COMMAND  shift 14
	IP_COMMAND  shift 15
	NETSTAT_COMMAND  shift 16
	CURL_COMMAND  shift 17
	.  error

	total  goto 18
	line  goto 19
	mv_line  goto 20
	ls_line  goto 21
	pwd_line  goto 22
	touch_line  goto 23
	rm_line  goto 24
	grep_line  goto 25
	cat_line  goto 26
	ps_line  goto 27
	clear_line  goto 28
	history_line  goto 29
	mkdir_line  goto 30
	cp_line  goto 31
	head_line  goto 32
	pkill_line  goto 33
	ip_line  goto 34
	netstat_line  goto 35
	curl_line  goto 36


state 1
	mv_line : MV_COMMAND . mv_all_options path_dst  (73)
	mv_line : MV_COMMAND . path_dst mv_all_options  (74)

	PARAM_NAME  shift 37
	PARAM_VALUE  shift 38
	.  error

	mv_all_options  goto 39
	path_dst  goto 40


state 2
	ls_line : LS_COMMAND . ls_all_options  (21)
	ls_line : LS_COMMAND . ls_all_options PARAM_VALUE  (22)
	ls_line : LS_COMMAND . PARAM_VALUE ls_all_options  (23)
	ls_line : LS_COMMAND .  (24)
	ls_line : LS_COMMAND . PARAM_VALUE  (25)

	PARAM_NAME  shift 41
	PARAM_VALUE  shift 42
	$end  reduce 24
	CMD_SEPARATOR  reduce 24

	ls_all_options  goto 43


state 3
	pwd_line : PWD_COMMAND .  (80)
	pwd_line : PWD_COMMAND . pwd_all_options  (81)

	PARAM_NAME  shift 44
	$end  reduce 80
	CMD_SEPARATOR  reduce 80

	pwd_all_options  goto 45


state 4
	touch_line : TOUCH_COMMAND . PARAM_VALUE  (86)
	touch_line : TOUCH_COMMAND . touch_all_options PARAM_VALUE  (87)
	touch_line : TOUCH_COMMAND . PARAM_VALUE touch_all_options  (88)
	touch_line : TOUCH_COMMAND . touch_all_options  (89)

	PARAM_NAME  shift 46
	PARAM_VALUE  shift 47
	.  error

	touch_all_options  goto 48


state 5
	rm_line : RM_COMMAND . PARAM_VALUE  (94)
	rm_line : RM_COMMAND . rm_all_options PARAM_VALUE  (95)
	rm_line : RM_COMMAND . PARAM_VALUE rm_all_options  (96)
	rm_line : RM_COMMAND . rm_all_options  (97)

	PARAM_NAME  shift 49
	PARAM_VALUE  shift 50
	.  error

	rm_all_options  goto 51


state 6
	grep_line : GREP_COMMAND . grep_args  (102)
	grep_line : GREP_COMMAND . grep_all_options grep_args  (103)
	grep_line : GREP_COMMAND . grep_args grep_all_options  (104)
	grep_line : GREP_COMMAND . grep_all_options  (105)

	PARAM_NAME  shift 52
	PARAM_VALUE  shift 53
	.  error

	grep_all_options  goto 54
	grep_args  goto 55


state 7
	cat_line : CAT_COMMAND .  (110)
	cat_line : CAT_COMMAND . PARAM_VALUE  (111)
	cat_line : CAT_COMMAND . cat_all_options PARAM_VALUE  (112)
	cat_line : CAT_COMMAND . PARAM_VALUE cat_all_options  (113)
	cat_line : CAT_COMMAND . cat_all_options  (114)

	PARAM_NAME  shift 56
	PARAM_VALUE  shift 57
	$end  reduce 110
	CMD_SEPARATOR  reduce 110

	cat_all_options  goto 58


state 8
	ps_line : PS_COMMAND .  (119)
	ps_line : PS_COMMAND . ps_all_options  (120)
	ps_line : PS_COMMAND . PARAM_VALUE  (121)

	PARAM_NAME  shift 59
	PARAM_VALUE  shift 60
	$end  reduce 119
	CMD_SEPARATOR  reduce 119

	ps_all_options  goto 61


state 9
	clear_line : CLEAR_COMMAND .  (126)

	.  reduce 126


state 10
	history_line : HISTORY_COMMAND .  (127)
	history_line : HISTORY_COMMAND . PARAM_VALUE  (128)

	PARAM_VALUE  shift 62
	$end  reduce 127
	CMD_SEPARATOR  reduce 127


state 11
	mkdir_line : MKDIR_COMMAND . mkdir_all_options PARAM_VALUE  (30)
	mkdir_line : MKDIR_COMMAND . PARAM_VALUE mkdir_all_options  (31)
	mkdir_line : MKDIR_COMMAND . mkdir_all_options  (32)

	PARAM_NAME  shift 63
	PARAM_VALUE  shift 64
	.  error

	mkdir_all_options  goto 65


state 12
	cp_line : CP_COMMAND . cp_all_options cp_file_dest  (37)
	cp_line : CP_COMMAND . cp_file_dest cp_all_options  (38)

	PARAM_NAME  shift 66
	PARAM_VALUE  shift 67
	.  error

	cp_all_options  goto 68
	cp_file_dest  goto 69


state 13
	head_line : HEAD_COMMAND . head_all_options head_all_paths  (44)

	PARAM_NAME  shift 70
	HEAD_PARAM  shift 71
	.  error

	head_all_options  goto 72


state 14
	pkill_line : PKILL_COMMAND . PARAM_VALUE  (50)
	pkill_line : PKILL_COMMAND . pkill_all_options  (51)

	PARAM_NAME  shift 73
	PARAM_VALUE  shift 74
	INT_VALUE  shift 75
	.  error

	pkill_all_options  goto 76
	pkill_param  goto 77


state 15
	ip_line : IP_COMMAND . PARAM_VALUE  (58)
	ip_line : IP_COMMAND . ip_all_options PARAM_VALUE  (59)

	PARAM_NAME  shift 78
	PARAM_VALUE  shift 79
	.  error

	ip_all_options  goto 80


state 16
	netstat_line : NETSTAT_COMMAND . netstat_all_options netstat_arg  (62)

	PARAM_NAME  shift 81
	.  error

	netstat_all_options  goto 82


state 17
	curl_line : CURL_COMMAND . curl_all_options PARAM_VALUE  (67)
	curl_line : CURL_COMMAND . PARAM_VALUE curl_all_options  (68)

	PARAM_NAME  shift 83
	PARAM_VALUE  shift 84
	.  error

	curl_all_options  goto 85


state 18
	$accept : total . $end  (0)
	total : total . CMD_SEPARATOR line  (2)
	total : total . CMD_SEPARATOR  (3)

	$end  accept
	CMD_SEPARATOR  shift 86
	.  error


state 19
	total : line .  (1)

	.  reduce 1


state 20
	line : mv_line .  (4)

	.  reduce 4


state 21
	line : ls_line .  (5)

	.  reduce 5


state 22
	line : pwd_line .  (6)

	.  reduce 6


state 23
	line : touch_line .  (7)

	.  reduce 7


state 24
	line : rm_line .  (8)

	.  reduce 8


state 25
	line : grep_line .  (9)

	.  reduce 9


state 26
	line : cat_line .  (10)

	.  reduce 10


state 27
	line : ps_line .  (11)

	.  reduce 11


state 28
	line : clear_line .  (12)

	.  reduce 12


state 29
	line : history_line .  (13)

	.  reduce 13


state 30
	line : mkdir_line .  (14)

	.  reduce 14


state 31
	line : cp_line .  (15)

	.  reduce 15


state 32
	line : head_line .  (16)

	.  reduce 16


state 33
	line : pkill_line .  (17)

	.  reduce 17


state 34
	line : ip_line .  (18)

	.  reduce 18


state 35
	line : netstat_line .  (19)

	.  reduce 19


state 36
	line : curl_line .  (20)

	.  reduce 20


state 37
	mv_all_options : PARAM_NAME . PARAM_VALUE  (76)
	mv_all_options : PARAM_NAME .  (77)
	mv_all_options : PARAM_NAME . PARAM_VALUE mv_all_options  (78)
	mv_all_options : PARAM_NAME . mv_all_options  (79)

	PARAM_NAME  shift 37
	PARAM_VALUE  shift 87
	$end  reduce 77
	CMD_SEPARATOR  reduce 77

	mv_all_options  goto 88


state 38
	path_dst : PARAM_VALUE . PARAM_VALUE  (75)

	PARAM_VALUE  shift 89
	.  error


state 39
	mv_line : MV_COMMAND mv_all_options . path_dst  (73)

	PARAM_VALUE  shift 38
	.  error

	path_dst  goto 90


state 40
	mv_line : MV_COMMAND path_dst . mv_all_options  (74)

	PARAM_NAME  shift 37
	.  error

	mv_all_options  goto 91


state 41
	ls_all_options : PARAM_NAME . PARAM_VALUE  (26)
	ls_all_options : PARAM_NAME .  (27)
	ls_all_options : PARAM_NAME . PARAM_VALUE ls_all_options  (28)
	ls_all_options : PARAM_NAME . ls_all_options  (29)

	PARAM_NAME  shift 41
	PARAM_VALUE  shift 92
	$end  reduce 27
	CMD_SEPARATOR  reduce 27

	ls_all_options  goto 93


state 42
	ls_line : LS_COMMAND PARAM_VALUE . ls_all_options  (23)
	ls_line : LS_COMMAND PARAM_VALUE .  (25)

	PARAM_NAME  shift 41
	$end  reduce 25
	CMD_SEPARATOR  reduce 25

	ls_all_options  goto 94


state 43
	ls_line : LS_COMMAND ls_all_options .  (21)
	ls_line : LS_COMMAND ls_all_options . PARAM_VALUE  (22)

	PARAM_VALUE  shift 95
	$end  reduce 21
	CMD_SEPARATOR  reduce 21


state 44
	pwd_all_options : PARAM_NAME . PARAM_VALUE  (82)
	pwd_all_options : PARAM_NAME .  (83)
	pwd_all_options : PARAM_NAME . PARAM_VALUE pwd_all_options  (84)
	pwd_all_options : PARAM_NAME . pwd_all_options  (85)

	PARAM_NAME  shift 44
	PARAM_VALUE  shift 96
	$end  reduce 83
	CMD_SEPARATOR  reduce 83

	pwd_all_options  goto 97


state 45
	pwd_line : PWD_COMMAND pwd_all_options .  (81)

	.  reduce 81


state 46
	touch_all_options : PARAM_NAME . PARAM_VALUE  (90)
	touch_all_options : PARAM_NAME .  (91)
	touch_all_options : PARAM_NAME . PARAM_VALUE touch_all_options  (92)
	touch_all_options : PARAM_NAME . touch_all_options  (93)

	PARAM_NAME  shift 46
	PARAM_VALUE  shift 98
	$end  reduce 91
	CMD_SEPARATOR  reduce 91

	touch_all_options  goto 99


state 47
	touch_line : TOUCH_COMMAND PARAM_VALUE .  (86)
	touch_line : TOUCH_COMMAND PARAM_VALUE . touch_all_options  (88)

	PARAM_NAME  shift 46
	$end  reduce 86
	CMD_SEPARATOR  reduce 86

	touch_all_options  goto 100


state 48
	touch_line : TOUCH_COMMAND touch_all_options . PARAM_VALUE  (87)
	touch_line : TOUCH_COMMAND touch_all_options .  (89)

	PARAM_VALUE  shift 101
	$end  reduce 89
	CMD_SEPARATOR  reduce 89


state 49
	rm_all_options : PARAM_NAME . PARAM_VALUE  (98)
	rm_all_options : PARAM_NAME .  (99)
	rm_all_options : PARAM_NAME . PARAM_VALUE rm_all_options  (100)
	rm_all_options : PARAM_NAME . rm_all_options  (101)

	PARAM_NAME  shift 49
	PARAM_VALUE  shift 102
	$end  reduce 99
	CMD_SEPARATOR  reduce 99

	rm_all_options  goto 103


state 50
	rm_line : RM_COMMAND PARAM_VALUE .  (94)
	rm_line : RM_COMMAND PARAM_VALUE . rm_all_options  (96)

	PARAM_NAME  shift 49
	$end  reduce 94
	CMD_SEPARATOR  reduce 94

	rm_all_options  goto 104


state 51
	rm_line : RM_COMMAND rm_all_options . PARAM_VALUE  (95)
	rm_line : RM_COMMAND rm_all_options .  (97)

	PARAM_VALUE  shift 105
	$end  reduce 97
	CMD_SEPARATOR  reduce 97


state 52
	grep_all_options : PARAM_NAME .  (108)
	grep_all_options : PARAM_NAME . grep_all_options  (109)

	PARAM_NAME  shift 52
	$end  reduce 108
	PARAM_VALUE  reduce 108
	CMD_SEPARATOR  reduce 108

	grep_all_options  goto 106


state 53
	grep_args : PARAM_VALUE . PARAM_VALUE  (106)
	grep_args : PARAM_VALUE .  (107)

	PARAM_VALUE  shift 107
	$end  reduce 107
	PARAM_NAME  reduce 107
	CMD_SEPARATOR  reduce 107


state 54
	grep_line : GREP_COMMAND grep_all_options . grep_args  (103)
	grep_line : GREP_COMMAND grep_all_options .  (105)

	PARAM_VALUE  shift 53
	$end  reduce 105
	CMD_SEPARATOR  reduce 105

	grep_args  goto 108


state 55
	grep_line : GREP_COMMAND grep_args .  (102)
	grep_line : GREP_COMMAND grep_args . grep_all_options  (104)

	PARAM_NAME  shift 52
	$end  reduce 102
	CMD_SEPARATOR  reduce 102

	grep_all_options  goto 109


state 56
	cat_all_options : PARAM_NAME . PARAM_VALUE  (115)
	cat_all_options : PARAM_NAME .  (116)
	cat_all_options : PARAM_NAME . PARAM_VALUE cat_all_options  (117)
	cat_all_options : PARAM_NAME . cat_all_options  (118)

	PARAM_NAME  shift 56
	PARAM_VALUE  shift 110
	$end  reduce 116
	CMD_SEPARATOR  reduce 116

	cat_all_options  goto 111


state 57
	cat_line : CAT_COMMAND PARAM_VALUE .  (111)
	cat_line : CAT_COMMAND PARAM_VALUE . cat_all_options  (113)

	PARAM_NAME  shift 56
	$end  reduce 111
	CMD_SEPARATOR  reduce 111

	cat_all_options  goto 112


state 58
	cat_line : CAT_COMMAND cat_all_options . PARAM_VALUE  (112)
	cat_line : CAT_COMMAND cat_all_options .  (114)

	PARAM_VALUE  shift 113
	$end  reduce 114
	CMD_SEPARATOR  reduce 114


state 59
	ps_all_options : PARAM_NAME . PARAM_VALUE  (122)
	ps_all_options : PARAM_NAME .  (123)
	ps_all_options : PARAM_NAME . PARAM_VALUE ps_all_options  (124)
	ps_all_options : PARAM_NAME . ps_all_options  (125)

	PARAM_NAME  shift 59
	PARAM_VALUE  shift 114
	$end  reduce 123
	CMD_SEPARATOR  reduce 123

	ps_all_options  goto 115


state 60
	ps_line : PS_COMMAND PARAM_VALUE .  (121)

	.  reduce 121


state 61
	ps_line : PS_COMMAND ps_all_options .  (120)

	.  reduce 120


state 62
	history_line : HISTORY_COMMAND PARAM_VALUE .  (128)

	.  reduce 128


state 63
	mkdir_all_options : PARAM_NAME . PARAM_VALUE  (33)
	mkdir_all_options : PARAM_NAME .  (34)
	mkdir_all_options : PARAM_NAME . PARAM_VALUE mkdir_all_options  (35)
	mkdir_all_options : PARAM_NAME . mkdir_all_options  (36)

	PARAM_NAME  shift 63
	PARAM_VALUE  shift 116
	$end  reduce 34
	CMD_SEPARATOR  reduce 34

	mkdir_all_options  goto 117


state 64
	mkdir_line : MKDIR_COMMAND PARAM_VALUE . mkdir_all_options  (31)

	PARAM_NAME  shift 63
	.  error

	mkdir_all_options  goto 118


state 65
	mkdir_line : MKDIR_COMMAND mkdir_all_options . PARAM_VALUE  (30)
	mkdir_line : MKDIR_COMMAND mkdir_all_options .  (32)

	PARAM_VALUE  shift 119
	$end  reduce 32
	CMD_SEPARATOR  reduce 32


state 66
	cp_all_options : PARAM_NAME . PARAM_VALUE  (40)
	cp_all_options : PARAM_NAME .  (41)
	cp_all_options : PARAM_NAME . PARAM_VALUE cp_all_options  (42)
	cp_all_options : PARAM_NAME . cp_all_options  (43)

	PARAM_NAME  shift 66
	PARAM_VALUE  shift 120
	$end  reduce 41
	CMD_SEPARATOR  reduce 41

	cp_all_options  goto 121


state 67
	cp_file_dest : PARAM_VALUE . PARAM_VALUE  (39)

	PARAM_VALUE  shift 122
	.  error


state 68
	cp_line : CP_COMMAND cp_all_options . cp_file_dest  (37)

	PARAM_VALUE  shift 67
	.  error

	cp_file_dest  goto 123


state 69
	cp_line : CP_COMMAND cp_file_dest . cp_all_options  (38)

	PARAM_NAME  shift 66
	.  error

	cp_all_options  goto 124


state 70
	head_all_options : PARAM_NAME . head_all_options  (49)

	PARAM_NAME  shift 70
	HEAD_PARAM  shift 71
	.  error

	head_all_options  goto 125


state 71
	head_all_options : HEAD_PARAM . INT_VALUE  (47)
	head_all_options : HEAD_PARAM . INT_VALUE head_all_options  (48)

	INT_VALUE  shift 126
	.  error


state 72
	head_line : HEAD_COMMAND head_all_options . head_all_paths  (44)

	PARAM_VALUE  shift 127
	.  error

	head_all_paths  goto 128


state 73
	pkill_param : PARAM_NAME .  (56)

	.  reduce 56


state 74
	pkill_line : PKILL_COMMAND PARAM_VALUE .  (50)

	.  reduce 50


state 75
	pkill_param : INT_VALUE .  (57)

	.  reduce 57


state 76
	pkill_line : PKILL_COMMAND pkill_all_options .  (51)

	.  reduce 51


state 77
	pkill_all_options : pkill_param . PARAM_VALUE  (52)
	pkill_all_options : pkill_param .  (53)
	pkill_all_options : pkill_param . PARAM_VALUE pkill_all_options  (54)
	pkill_all_options : pkill_param . pkill_all_options  (55)

	PARAM_NAME  shift 73
	PARAM_VALUE  shift 129
	INT_VALUE  shift 75
	$end  reduce 53
	CMD_SEPARATOR  reduce 53

	pkill_all_options  goto 130
	pkill_param  goto 77


state 78
	ip_all_options : PARAM_NAME .  (60)
	ip_all_options : PARAM_NAME . ip_all_options  (61)

	PARAM_NAME  shift 78
	PARAM_VALUE  reduce 60

	ip_all_options  goto 131


state 79
	ip_line : IP_COMMAND PARAM_VALUE .  (58)

	.  reduce 58


state 80
	ip_line : IP_COMMAND ip_all_options . PARAM_VALUE  (59)

	PARAM_VALUE  shift 132
	.  error


state 81
	netstat_all_options : PARAM_NAME .  (65)
	netstat_all_options : PARAM_NAME . netstat_all_options  (66)

	PARAM_NAME  shift 81
	$end  reduce 65
	PARAM_VALUE  reduce 65
	CMD_SEPARATOR  reduce 65

	netstat_all_options  goto 133


state 82
	netstat_line : NETSTAT_COMMAND netstat_all_options . netstat_arg  (62)
	netstat_arg : .  (64)

	PARAM_VALUE  shift 134
	$end  reduce 64
	CMD_SEPARATOR  reduce 64

	netstat_arg  goto 135


state 83
	curl_all_options : PARAM_NAME . PARAM_VALUE  (69)
	curl_all_options : PARAM_NAME .  (70)
	curl_all_options : PARAM_NAME . PARAM_VALUE curl_all_options  (71)
	curl_all_options : PARAM_NAME . curl_all_options  (72)

	PARAM_NAME  shift 83
	PARAM_VALUE  shift 136
	$end  reduce 70
	CMD_SEPARATOR  reduce 70

	curl_all_options  goto 137


state 84
	curl_line : CURL_COMMAND PARAM_VALUE . curl_all_options  (68)

	PARAM_NAME  shift 83
	.  error

	curl_all_options  goto 138


state 85
	curl_line : CURL_COMMAND curl_all_options . PARAM_VALUE  (67)

	PARAM_VALUE  shift 139
	.  error


state 86
	total : total CMD_SEPARATOR . line  (2)
	total : total CMD_SEPARATOR .  (3)

	MV_COMMAND  shift 1
	LS_COMMAND  shift 2
	PWD_COMMAND  shift 3
	TOUCH_COMMAND  shift 4
	RM_COMMAND  shift 5
	GREP_COMMAND  shift 6
	CAT_COMMAND  shift 7
	PS_COMMAND  shift 8
	CLEAR_COMMAND  shift 9
	HISTORY_COMMAND  shift 10
	MKDIR_COMMAND  shift 11
	CP_COMMAND  shift 12
	HEAD_COMMAND  shift 13
	PKILL_COMMAND  shift 14
	IP_COMMAND  shift 15
	NETSTAT_COMMAND  shift 16
	CURL_COMMAND  shift 17
	$end  reduce 3
	CMD_SEPARATOR  reduce 3

	line  goto 140
	mv_line  goto 20
	ls_line  goto 21
	pwd_line  goto 22
	touch_line  goto 23
	rm_line  goto 24
	grep_line  goto 25
	cat_line  goto 26
	ps_line  goto 27
	clear_line  goto 28
	history_line  goto 29
	mkdir_line  goto 30
	cp_line  goto 31
	head_line  goto 32
	pkill_line  goto 33
	ip_line  goto 34
	netstat_line  goto 35
	curl_line  goto 36


state 87
	mv_all_options : PARAM_NAME PARAM_VALUE .  (76)
	mv_all_options : PARAM_NAME PARAM_VALUE . mv_all_options  (78)

	PARAM_NAME  shift 37
	$end  reduce 76
	PARAM_VALUE  reduce 76
	CMD_SEPARATOR  reduce 76

	mv_all_options  goto 141


state 88
	mv_all_options : PARAM_NAME mv_all_options .  (79)

	.  reduce 79


state 89
	path_dst : PARAM_VALUE PARAM_VALUE .  (75)

	.  reduce 75


state 90
	mv_line : MV_COMMAND mv_all_options path_dst .  (73)

	.  reduce 73


state 91
	mv_line : MV_COMMAND path_dst mv_all_options .  (74)

	.  reduce 74


state 92
	ls_all_options : PARAM_NAME PARAM_VALUE .  (26)
	ls_all_options : PARAM_NAME PARAM_VALUE . ls_all_options  (28)

	PARAM_NAME  shift 41
	$end  reduce 26
	PARAM_VALUE  reduce 26
	CMD_SEPARATOR  reduce 26

	ls_all_options  goto 142


state 93
	ls_all_options : PARAM_NAME ls_all_options .  (29)

	.  reduce 29


state 94
	ls_line : LS_COMMAND PARAM_VALUE ls_all_options .  (23)

	.  reduce 23


state 95
	ls_line : LS_COMMAND ls_all_options PARAM_VALUE .  (22)

	.  reduce 22


state 96
	pwd_all_options : PARAM_NAME PARAM_VALUE .  (82)
	pwd_all_options : PARAM_NAME PARAM_VALUE . pwd_all_options  (84)

	PARAM_NAME  shift 44
	$end  reduce 82
	CMD_SEPARATOR  reduce 82

	pwd_all_options  goto 143


state 97
	pwd_all_options : PARAM_NAME pwd_all_options .  (85)

	.  reduce 85


state 98
	touch_all_options : PARAM_NAME PARAM_VALUE .  (90)
	touch_all_options : PARAM_NAME PARAM_VALUE . touch_all_options  (92)

	PARAM_NAME  shift 46
	$end  reduce 90
	PARAM_VALUE  reduce 90
	CMD_SEPARATOR  reduce 90

	touch_all_options  goto 144


state 99
	touch_all_options : PARAM_NAME touch_all_options .  (93)

	.  reduce 93


state 100
	touch_line : TOUCH_COMMAND PARAM_VALUE touch_all_options .  (88)

	.  reduce 88


state 101
	touch_line : TOUCH_COMMAND touch_all_options PARAM_VALUE .  (87)

	.  reduce 87


state 102
	rm_all_options : PARAM_NAME PARAM_VALUE .  (98)
	rm_all_options : PARAM_NAME PARAM_VALUE . rm_all_options  (100)

	PARAM_NAME  shift 49
	$end  reduce 98
	PARAM_VALUE  reduce 98
	CMD_SEPARATOR  reduce 98

	rm_all_options  goto 145


state 103
	rm_all_options : PARAM_NAME rm_all_options .  (101)

	.  reduce 101


state 104
	rm_line : RM_COMMAND PARAM_VALUE rm_all_options .  (96)

	.  reduce 96


state 105
	rm_line : RM_COMMAND rm_all_options PARAM_VALUE .  (95)

	.  reduce 95


state 106
	grep_all_options : PARAM_NAME grep_all_options .  (109)

	.  reduce 109


state 107
	grep_args : PARAM_VALUE PARAM_VALUE .  (106)

	.  reduce 106


state 108
	grep_line : GREP_COMMAND grep_all_options grep_args .  (103)

	.  reduce 103


state 109
	grep_line : GREP_COMMAND grep_args grep_all_options .  (104)

	.  reduce 104


state 110
	cat_all_options : PARAM_NAME PARAM_VALUE .  (115)
	cat_all_options : PARAM_NAME PARAM_VALUE . cat_all_options  (117)

	PARAM_NAME  shift 56
	$end  reduce 115
	PARAM_VALUE  reduce 115
	CMD_SEPARATOR  reduce 115

	cat_all_options  goto 146


state 111
	cat_all_options : PARAM_NAME cat_all_options .  (118)

	.  reduce 118


state 112
	cat_line : CAT_COMMAND PARAM_VALUE cat_all_options .  (113)

	.  reduce 113


state 113
	cat_line : CAT_COMMAND cat_all_options PARAM_VALUE .  (112)

	.  reduce 112


state 114
	ps_all_options : PARAM_NAME PARAM_VALUE .  (122)
	ps_all_options : PARAM_NAME PARAM_VALUE . ps_all_options  (124)

	PARAM_NAME  shift 59
	$end  reduce 122
	CMD_SEPARATOR  reduce 122

	ps_all_options  goto 147


state 115
	ps_all_options : PARAM_NAME ps_all_options .  (125)

	.  reduce 125


state 116
	mkdir_all_options : PARAM_NAME PARAM_VALUE .  (33)
	mkdir_all_options : PARAM_NAME PARAM_VALUE . mkdir_all_options  (35)

	PARAM_NAME  shift 63
	$end  reduce 33
	PARAM_VALUE  reduce 33
	CMD_SEPARATOR  reduce 33

	mkdir_all_options  goto 148


state 117
	mkdir_all_options : PARAM_NAME mkdir_all_options .  (36)

	.  reduce 36


state 118
	mkdir_line : MKDIR_COMMAND PARAM_VALUE mkdir_all_options .  (31)

	.  reduce 31


state 119
	mkdir_line : MKDIR_COMMAND mkdir_all_options PARAM_VALUE .  (30)

	.  reduce 30


state 120
	cp_all_options : PARAM_NAME PARAM_VALUE .  (40)
	cp_all_options : PARAM_NAME PARAM_VALUE . cp_all_options  (42)

	PARAM_NAME  shift 66
	$end  reduce 40
	PARAM_VALUE  reduce 40
	CMD_SEPARATOR  reduce 40

	cp_all_options  goto 149


state 121
	cp_all_options : PARAM_NAME cp_all_options .  (43)

	.  reduce 43


state 122
	cp_file_dest : PARAM_VALUE PARAM_VALUE .  (39)

	.  reduce 39


state 123
	cp_line : CP_COMMAND cp_all_options cp_file_dest .  (37)

	.  reduce 37


state 124
	cp_line : CP_COMMAND cp_file_dest cp_all_options .  (38)

	.  reduce 38


state 125
	head_all_options : PARAM_NAME head_all_options .  (49)

	.  reduce 49


state 126
	head_all_options : HEAD_PARAM INT_VALUE .  (47)
	head_all_options : HEAD_PARAM INT_VALUE . head_all_options  (48)

	PARAM_NAME  shift 70
	HEAD_PARAM  shift 71
	PARAM_VALUE  reduce 47

	head_all_options  goto 150


state 127
	head_all_paths : PARAM_VALUE .  (45)
	head_all_paths : PARAM_VALUE . head_all_paths  (46)
